Fix on mobile titles, and setup of credits

--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -20,6 +20,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-block-end: -4rem;
     
 }
 
@@ -134,6 +136,7 @@
 
         overflow: hidden;
 
+        margin: 0;
         margin-inline-start: -480px;
         
     }
@@ -149,7 +152,6 @@
     color: var(--color-white);
   
     margin: 0;
-    margin-block-start: -20%;
     margin-block-end: 2rem;
 
     text-align: center;
