--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -187,6 +187,21 @@
 
 }
 
+.hidden__credits {
+
+    height: 100%;
+    width: 100%;
+
+    background-color: red;
+
+    position: absolute;
+    top: 0;
+    z-index: 1;
+
+    display: none;
+
+}
+
 // =========================
 //       SIDE SCROLL
 // =========================
